saved the changes

--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -230,13 +230,13 @@
                 <div class="card">
                     <img src="static/images/sanjana.jpg" alt="Team Member">
                     <h3>Sanjana Telang</h3>
-                    <p>Backend Developer & NLP Enthusiast</p>
+                    <p>Backend Developer</p>
                     <a href="mailto:sanjanatelang443@gmail.com">sanjanatelang443@gmail.com</a>
                 </div>
                 <div class="card">
                     <img src="static/images/parth.jpg" alt="Team Member">
                     <h3>Parth Dhone</h3>
-                    <p>Machine learning Engineer</p>
+                    <p>Data Scientist</p>
                     <a href="mailto:parthdhone53@gmail.com">parthdhone53@gmail.com</a>
                 </div>
             </div>
